# topo-core

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
lib-late/: CMakeLists.txt
lib/AST/: ASTPrinter.cpp  CMakeLists.txt
lib/Analysis/: CMakeLists.txt  ImportPathCheck.cpp  LifetimeAnalysis.cpp  PipelineAnalysis.cpp  PriorityAnalysis.cpp  StageAnalysis.cpp  VisibilityPolicy.cpp
lib/Basic/: CMakeLists.txt  Diagnostic.cpp
lib/Check/: CMakeLists.txt  CapabilityCatalog.cpp  CompletenessCheck.cpp  ContainmentCheck.cpp  ImportExtractor.cpp  PruningOrchestrator.cpp  PurityCheck.cpp  StageIsolationCheck.cpp  StubRewriter.cpp  StubVerificationCheck.cpp  SymbolExtractor.cpp  VerificationOrchestrator.cpp  VisibilityCheck.cpp
lib/Debug/: CMakeLists.txt  Emitter.cpp  PassReportsLoader.cpp  SummaryRenderer.cpp  TemplateEngine.cpp
lib/Debug/Ipc/: BinaryFrame.cpp  FrameReader.cpp  FrameWriter.cpp
lib/Debug/Query/: Evaluator.cpp  FrameView.cpp  Parser.cpp  Value.cpp
lib/Debug/Server/: Assets.cpp  HttpServer.cpp  RenderFnLoader.cpp  WebSocket.cpp
lib/Distribution/: BackendCache.cpp  BackendCli.cpp  BackendManifest.cpp  CMakeLists.txt  RegistryIndex.cpp  SemVer.cpp  Sha256.cpp
lib/Format/: CMakeLists.txt  Formatter.cpp
lib/LSP/: CMakeLists.txt  LSPBridge.cpp
lib/Lexer/: CMakeLists.txt  Lexer.cpp
lib/Parser/: CMakeLists.txt  Parser.cpp
lib/Platform/: CMakeLists.txt  FileGlob.cpp  FileLock.cpp  Memory.cpp  Process.cpp  Sanitize.cpp  SharedLibrary.cpp  TempFile.cpp  ToolResolution.cpp
lib/Profile/: AsyncProfilerConverter.cpp  CMakeLists.txt  CProfileNdjsonConverter.cpp  CpuProfileConverter.cpp  JfrNdjsonConverter.cpp  ProfileEngine.cpp  SamplingConverter.cpp  SpeedscopeConverter.cpp  SysMonitoringNdjsonConverter.cpp
lib/Sema/: CMakeLists.txt  ImportResolver.cpp  SemanticAnalyzer.cpp  SmartStructMatcher.cpp  SymbolTable.cpp  TypeBinder.cpp  TypeRegistry.cpp  TypeResolver.cpp  VisibilityCollector.cpp
lib/Stdlib/: CMakeLists.txt  Types.cpp
lib/Transform/: CMakeLists.txt  SemanticVerifier.cpp  TokenStreamRewriter.cpp
lib/Transpile/: AdapterResolver.cpp  CMakeLists.txt  ModelOptimizer.cpp  TopoSourceBuilder.cpp  TranspileDriver.cpp  TranspileModelJson.cpp
test/: CMakeLists.txt  FeatureMap.cmake  debug-profile-e2e.cmake  spec-traceability.toml
test/check/: CMakeLists.txt  TestMain.cpp  vcpkg.json
test/check/e2e/: CheckRunnerTest.cpp
test/debug-serve/: serve_export_templates_smoke.sh  serve_real_target.sh  serve_smoke.sh  serve_wp45_smoke.sh  serve_ws_query.sh
test/dist-smoke/: CMakeLists.txt  check-only-install.sh
test/fixtures/: all_features.topo  class_verify.topo  comptime_visibility.topo  const_test.topo  constraint_verify.topo  demo.topo  error.topo  expression_test.topo  format_comments.topo  format_imports.topo  format_minimal.topo  format_params.topo  format_visibility.topo  import_test.topo  internal_basic.topo  internal_cross_file.topo  internal_namespace.topo  minimal.topo  multi_return.topo  perf_large.topo  pipeline.topo  sema_errors.topo  stage_parallel.topo  template_instantiate.topo
test/fixtures/check_default/clean/: Topo.toml  main.topo
test/fixtures/check_default/violating/: Topo.toml  main.topo
test/fixtures/clangd_test/: compile_commands.json  main.cpp
test/fixtures/internal_test/: app.cpp  app.topo
test/fixtures/transform/: already_canonical.topo  keyword_aliases.expected.topo  keyword_aliases.topo
test/fuzz/: BackendRequestParseFuzz.cpp  CMakeLists.txt  ConfigValidatorFuzz.cpp  FormatterFuzz.cpp  FuzzerCompat.cpp  IncrementalCacheFuzz.cpp  LexerFuzz.cpp  ParserFuzz.cpp  SemaFuzz.cpp  SymbolTableSerializerFuzz.cpp  TranspileDifferentialFuzz.cpp
test/fuzz/corpus/: .gitignore  seed_adapter_01.topo  seed_adapter_02.topo  seed_adapter_03.topo  seed_adapter_04.topo  seed_adapter_05.topo  seed_adapter_06.topo  seed_adapter_07.topo  seed_adapter_08.topo  seed_adapter_09.topo  seed_adapter_10.topo  seed_boundary_02.topo  seed_boundary_04.topo  seed_boundary_05.topo  seed_boundary_06.topo  seed_boundary_07.topo  seed_boundary_08.topo  seed_boundary_09.topo  seed_boundary_10.topo  seed_boundary_11.topo  seed_boundary_12.topo  seed_boundary_13.topo  seed_boundary_14.topo  seed_boundary_15.topo  seed_boundary_16.topo  seed_boundary_17.topo  seed_boundary_18.topo  seed_boundary_19.topo  seed_boundary_20.topo  seed_class.topo  seed_combined_01.topo  seed_combined_02.topo  seed_combined_03.topo  seed_combined_04.topo  seed_combined_05.topo  seed_combined_06.topo  seed_combined_07.topo  seed_combined_08.topo  seed_combined_09.topo  seed_combined_10.topo  (+124 more)
test/helpers/: ProcessTestHelper.cpp
test/init/: CMakeLists.txt
test/init/unit/: TopoInitTest.cpp
test/language/: CMakeLists.txt  coverage.toml
test/relocate/: CMakeLists.txt  relocation_probe.cpp  run-relocation-check.sh
test/topo-passes-sidecar/: verify_sidecar.sh
test/transpile/: CMakeLists.txt
test/transpile/equivalence/: TranspileEquivalenceTest.cpp
test/unit/: BuildCheckModeTest.cpp  CapabilityCatalogTest.cpp  CompletenessCheckTest.cpp  ContainmentCheckTest.cpp  DebugEmitterTest.cpp  DebugIpcTest.cpp  DistributionTest.cpp  EvaluatorStructTest.cpp  FormatterTest.cpp  FrontendPerfTest.cpp  ImportPathCheckTest.cpp  JfrNdjsonMergeTest.cpp  LSPBridgeTest.cpp  LexerTest.cpp  LifetimeAnalysisTest.cpp  ModelOptimizerTest.cpp  ParserSafetyTest.cpp  ParserTest.cpp  PassReportsLoaderTest.cpp  PipedProcessTest.cpp  PipelineAnalysisTest.cpp  PriorityAnalysisTest.cpp  ProcessSpawnTest.cpp  PruningOrchestratorTest.cpp  PurityCheckTest.cpp  SanitizeTest.cpp  SemaTest.cpp  SmartStructMatcherTest.cpp  SpecSemanticStructureTest.cpp  StageAnalysisTest.cpp  StageIsolationCheckTest.cpp  TempFileTest.cpp  TemplateEngineTest.cpp  TopoProfTest.cpp  TopoSourceTranspileTest.cpp  TransformTest.cpp  TranspileNewConstructsTest.cpp  TranspileTest.cpp  TranspileVerificationTest.cpp  TypeRegistryTest.cpp  (+4 more)
tools/topo/: CMakeLists.txt  main.cpp
tools/topo-debug/: CMakeLists.txt  main.cpp
tools/topo-debug-mock-adapter/: CMakeLists.txt  main.cpp
tools/topo-fmt/: CMakeLists.txt  main.cpp
(+329 files in other folders)
